# energy_market_analytics

./: .gitignore  .pre-commit-config.yaml  README.md  ema.toml  pyproject.toml
src/ema/: settings.py
src/ema/cli/: sync_prices.py
src/ema/ingestion/: energi_data_service_client.py  fetch_energy_market_raw.py  sync_day_ahead_prices.py
src/ema/storage/: duckdb_connection.py  init_db.py  inspect_db.py  schema.py
src/ema/time/: expected_intervals.py
