[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-market-analytics"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "duckdb",
    "pandas",
    "requests",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
sync-prices = "ema.cli.sync_prices:main"